fix(cors): radically simplify CORS for Vercel trailing slashes